FEAT : kakao Oauth 구현 - USERS 테이블 platform 칼럼 추가 - 간편 로그인 platform 구분해서 사용자 저장

--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -2,10 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Login</title>
+    <title>OAuth 2.0 로그인</title>
 </head>
 <body>
-    <h1>Login Page</h1>
-    <a href="/login/oauth2/google">Login with Google</a>
+    <a href="/oauth2/authorization/google" class="btn btn-sm btn-success active" role="button">Google Login</a><br>
+    <a href="/oauth2/authorization/kakao" class="btn btn-third active" role="button">Kakao Login</a>
 </body>
 </html>
